Created structure for handlers and implementations
