# api/gen.go
@@ -1,162 +1,0 @@
-// Package api provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
-package api
-
-import (
-	"fmt"
-	"net/http"
-
-	"github.com/gin-gonic/gin"
-	"github.com/oapi-codegen/runtime"
-)
-
-// ErrorResponse defines model for ErrorResponse.
-type ErrorResponse struct {
-	Code    int32  `json:"code"`
-	Message string `json:"message"`
-}
-
-// InternalServerError defines model for InternalServerError.
-type InternalServerError = ErrorResponse
-
-// InvalidRequestError defines model for InvalidRequestError.
-type InvalidRequestError = ErrorResponse
-
-// NotFoundError defines model for NotFoundError.
-type NotFoundError = ErrorResponse
-
-// ProductOverviewResponse defines model for ProductOverviewResponse.
-type ProductOverviewResponse struct {
-	ProductAttachements []string              `json:"productAttachements"`
-	ProductCategory     string                `json:"productCategory"`
-	ProductId           int64                 `json:"productId"`
-	ProductName         string                `json:"productName"`
-	ProductPrice        float32               `json:"productPrice"`
-	Rating              ProductRatingResponse `json:"rating"`
-	SellerUsername      string                `json:"sellerUsername"`
-}
-
-// ProductRatingResponse defines model for ProductRatingResponse.
-type ProductRatingResponse struct {
-	AverageRating float32 `json:"averageRating"`
-	RatedTimes    int32   `json:"ratedTimes"`
-}
-
-// UnauthorizedError defines model for UnauthorizedError.
-type UnauthorizedError = ErrorResponse
-
-// ServerInterface represents all server handlers.
-type ServerInterface interface {
-
-	// (GET /api/wishlist/)
-	GetWishlistItems(c *gin.Context)
-
-	// (DELETE /api/wishlist/items/{product_id})
-	DeleteItemFromWishlist(c *gin.Context, productId string)
-
-	// (POST /api/wishlist/items/{product_id})
-	AddItemToWishlist(c *gin.Context, productId string)
-}
-
-// ServerInterfaceWrapper converts contexts to parameters.
-type ServerInterfaceWrapper struct {
-	Handler            ServerInterface
-	HandlerMiddlewares []MiddlewareFunc
-	ErrorHandler       func(*gin.Context, error, int)
-}
-
-type MiddlewareFunc func(c *gin.Context)
-
-// GetWishlistItems operation middleware
-func (siw *ServerInterfaceWrapper) GetWishlistItems(c *gin.Context) {
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		middleware(c)
-		if c.IsAborted() {
-			return
-		}
-	}
-
-	siw.Handler.GetWishlistItems(c)
-}
-
-// DeleteItemFromWishlist operation middleware
-func (siw *ServerInterfaceWrapper) DeleteItemFromWishlist(c *gin.Context) {
-
-	var err error
-
-	// ------------- Path parameter "product_id" -------------
-	var productId string
-
-	err = runtime.BindStyledParameterWithOptions("simple", "product_id", c.Param("product_id"), &productId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
-	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter product_id: %w", err), http.StatusBadRequest)
-		return
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		middleware(c)
-		if c.IsAborted() {
-			return
-		}
-	}
-
-	siw.Handler.DeleteItemFromWishlist(c, productId)
-}
-
-// AddItemToWishlist operation middleware
-func (siw *ServerInterfaceWrapper) AddItemToWishlist(c *gin.Context) {
-
-	var err error
-
-	// ------------- Path parameter "product_id" -------------
-	var productId string
-
-	err = runtime.BindStyledParameterWithOptions("simple", "product_id", c.Param("product_id"), &productId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
-	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter product_id: %w", err), http.StatusBadRequest)
-		return
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		middleware(c)
-		if c.IsAborted() {
-			return
-		}
-	}
-
-	siw.Handler.AddItemToWishlist(c, productId)
-}
-
-// GinServerOptions provides options for the Gin server.
-type GinServerOptions struct {
-	BaseURL      string
-	Middlewares  []MiddlewareFunc
-	ErrorHandler func(*gin.Context, error, int)
-}
-
-// RegisterHandlers creates http.Handler with routing matching OpenAPI spec.
-func RegisterHandlers(router gin.IRouter, si ServerInterface) {
-	RegisterHandlersWithOptions(router, si, GinServerOptions{})
-}
-
-// RegisterHandlersWithOptions creates http.Handler with additional options
-func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options GinServerOptions) {
-	errorHandler := options.ErrorHandler
-	if errorHandler == nil {
-		errorHandler = func(c *gin.Context, err error, statusCode int) {
-			c.JSON(statusCode, gin.H{"msg": err.Error()})
-		}
-	}
-
-	wrapper := ServerInterfaceWrapper{
-		Handler:            si,
-		HandlerMiddlewares: options.Middlewares,
-		ErrorHandler:       errorHandler,
-	}
-
-	router.GET(options.BaseURL+"/api/wishlist/", wrapper.GetWishlistItems)
-	router.DELETE(options.BaseURL+"/api/wishlist/items/:product_id", wrapper.DeleteItemFromWishlist)
-	router.POST(options.BaseURL+"/api/wishlist/items/:product_id", wrapper.AddItemToWishlist)
-}
